--- a/XCode/DewertOkin/DewertOkin/RemoteControl/Remote.storyboard
+++ b/XCode/DewertOkin/DewertOkin/RemoteControl/Remote.storyboard
@@ -32,9 +32,6 @@
                                     <constraint firstAttribute="width" secondItem="0YV-jW-udd" secondAttribute="height" multiplier="1:1" priority="900" id="J32-lh-94W"/>
                                 </constraints>
                                 <state key="normal" title="Presets"/>
-                                <connections>
-                                    <segue destination="7U7-yR-P4u" kind="custom" customClass="pullUpSegue" customModule="DewertOkin" customModuleProvider="target" id="8t9-dl-DFs"/>
-                                </connections>
                             </button>
                             <imageView multipleTouchEnabled="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="chair_full_normal" translatesAutoresizingMaskIntoConstraints="NO" id="J9R-PK-aQG">
                                 <rect key="frame" x="10" y="120" width="394" height="577"/>
@@ -68,9 +65,6 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Extras"/>
-                                <connections>
-                                    <segue destination="dhz-n7-KIU" kind="custom" customClass="pullUpSegue" customModule="DewertOkin" customModuleProvider="target" id="3OI-rJ-yRb"/>
-                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kEo-gs-uD4">
                                 <rect key="frame" x="206" y="120" width="197" height="577"/>
@@ -126,61 +120,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B3X-h2-zOP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="40.579710144927539" y="26.116071428571427"/>
-        </scene>
-        <!--Extra Functions Controller-->
-        <scene sceneID="xWQ-VC-bVW">
-            <objects>
-                <viewController id="dhz-n7-KIU" customClass="ExtraFunctionsController" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="bVY-Xs-AHm">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="more functions of your device" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZA9-hk-D9x">
-                                <rect key="frame" x="50" y="94" width="314" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="KyL-s2-RUM"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KEs-Jp-XXs">
-                                <rect key="frame" x="20" y="164" width="374" height="678"/>
-                            </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ydd-5b-u6c">
-                                <rect key="frame" x="30" y="74" width="40" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="1iS-a3-Q30"/>
-                                    <constraint firstAttribute="width" constant="40" id="h4O-An-OHA"/>
-                                </constraints>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <segue destination="h1o-HI-eVS" kind="custom" customClass="pullUpUnwindSegue" customModule="DewertOkin" customModuleProvider="target" id="sYJ-lk-Ai1"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="ZA9-hk-D9x" firstAttribute="leading" secondItem="p1V-fM-tHG" secondAttribute="leading" constant="50" id="8a0-62-19L"/>
-                            <constraint firstItem="ydd-5b-u6c" firstAttribute="top" secondItem="p1V-fM-tHG" secondAttribute="top" constant="30" id="Dyc-UE-jOo"/>
-                            <constraint firstItem="p1V-fM-tHG" firstAttribute="trailing" secondItem="ZA9-hk-D9x" secondAttribute="trailing" constant="50" id="KAI-VE-ub5"/>
-                            <constraint firstItem="KEs-Jp-XXs" firstAttribute="leading" secondItem="p1V-fM-tHG" secondAttribute="leading" constant="20" id="M5A-Uz-M96"/>
-                            <constraint firstItem="p1V-fM-tHG" firstAttribute="bottom" secondItem="KEs-Jp-XXs" secondAttribute="bottom" constant="20" id="S8s-ej-7IM"/>
-                            <constraint firstItem="p1V-fM-tHG" firstAttribute="trailing" secondItem="KEs-Jp-XXs" secondAttribute="trailing" constant="20" id="WIm-Du-VNG"/>
-                            <constraint firstItem="ZA9-hk-D9x" firstAttribute="top" secondItem="p1V-fM-tHG" secondAttribute="top" constant="50" id="XnG-qo-GQX"/>
-                            <constraint firstItem="KEs-Jp-XXs" firstAttribute="top" secondItem="ZA9-hk-D9x" secondAttribute="bottom" constant="20" id="ekM-o0-ua0"/>
-                            <constraint firstItem="ydd-5b-u6c" firstAttribute="leading" secondItem="p1V-fM-tHG" secondAttribute="leading" constant="30" id="nfO-Fd-cyz"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="p1V-fM-tHG"/>
-                    </view>
-                    <connections>
-                        <outlet property="scrollView" destination="KEs-Jp-XXs" id="d0D-x2-kJH"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FXG-di-7HQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="935" y="26"/>
+            <point key="canvasLocation" x="-155" y="1193"/>
         </scene>
         <!--Presets Controller-->
         <scene sceneID="xaU-ZF-daG">
@@ -251,7 +191,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tds-zj-a6e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="41" y="735"/>
+            <point key="canvasLocation" x="-1162" y="1193"/>
         </scene>
         <!--Add Preset Controller-->
         <scene sceneID="1AI-db-4FM">
@@ -326,16 +266,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ed-NC-ZLc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="935" y="735"/>
+            <point key="canvasLocation" x="-2201" y="1193"/>
         </scene>
     </scenes>
     <resources>
-        <image name="chair_full_normal" width="2086" height="1623"/>
-        <image name="chair_normal_arrows" width="2086" height="1623"/>
-        <image name="remote_icon" width="20" height="20"/>
+        <image name="chair_full_normal" width="1001.280029296875" height="779"/>
+        <image name="chair_normal_arrows" width="1001.280029296875" height="779"/>
+        <image name="remote_icon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="ezb-3d-8hf"/>
-        <segue reference="cCd-WO-O29"/>
     </inferredMetricsTieBreakers>
 </document>
