--- a/XCode/DewertOkin/DewertOkin/RemoteControl/Remote.storyboard
+++ b/XCode/DewertOkin/DewertOkin/RemoteControl/Remote.storyboard
@@ -32,6 +32,9 @@
                                     <constraint firstAttribute="width" secondItem="0YV-jW-udd" secondAttribute="height" multiplier="1:1" priority="900" id="J32-lh-94W"/>
                                 </constraints>
                                 <state key="normal" title="Presets"/>
+                                <connections>
+                                    <segue destination="7U7-yR-P4u" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="edi-Vw-Fvw"/>
+                                </connections>
                             </button>
                             <imageView multipleTouchEnabled="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="chair_full_normal" translatesAutoresizingMaskIntoConstraints="NO" id="J9R-PK-aQG">
                                 <rect key="frame" x="10" y="120" width="394" height="577"/>
@@ -120,7 +123,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B3X-h2-zOP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-155" y="1193"/>
+            <point key="canvasLocation" x="-2723" y="1193"/>
         </scene>
         <!--Presets Controller-->
         <scene sceneID="xaU-ZF-daG">
@@ -140,17 +143,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Iz-5q-NNV">
-                                <rect key="frame" x="30" y="74" width="40" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="BAx-BE-lV7"/>
-                                    <constraint firstAttribute="width" constant="40" id="Wdt-KU-GRR"/>
-                                </constraints>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <segue destination="h1o-HI-eVS" kind="custom" customClass="pullUpUnwindSegue" customModule="DewertOkin" customModuleProvider="target" id="cCd-WO-O29"/>
-                                </connections>
-                            </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ccp-iL-o4J">
                                 <rect key="frame" x="20" y="164" width="374" height="678"/>
                             </scrollView>
@@ -167,18 +159,30 @@
                                     <segue destination="R1M-Df-ija" kind="custom" customClass="pullUpSegue" customModule="DewertOkin" customModuleProvider="target" id="r7J-NU-31I"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5sj-Z6-bkq">
+                                <rect key="frame" x="50" y="63" width="40" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="CBf-TV-GCA"/>
+                                    <constraint firstAttribute="height" constant="30" id="uJ5-2q-D6k"/>
+                                </constraints>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <action selector="backButtonPressed:" destination="R1M-Df-ija" eventType="touchUpInside" id="5LW-sa-kis"/>
+                                    <action selector="backButtonPressed:" destination="7U7-yR-P4u" eventType="touchUpInside" id="ILI-dU-eNT"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="5sj-Z6-bkq" firstAttribute="top" secondItem="Lsk-k0-a00" secondAttribute="top" constant="19" id="3jV-cZ-QmW"/>
                             <constraint firstItem="Lsk-k0-a00" firstAttribute="trailing" secondItem="ccp-iL-o4J" secondAttribute="trailing" constant="20" id="5pj-xq-m1u"/>
                             <constraint firstItem="ccp-iL-o4J" firstAttribute="top" secondItem="Qv0-SW-Iyx" secondAttribute="bottom" constant="20" id="8iy-gm-ZpH"/>
-                            <constraint firstItem="4Iz-5q-NNV" firstAttribute="leading" secondItem="Lsk-k0-a00" secondAttribute="leading" constant="30" id="V3J-rn-0K2"/>
+                            <constraint firstItem="5sj-Z6-bkq" firstAttribute="leading" secondItem="Qv0-SW-Iyx" secondAttribute="leading" id="Pwq-z2-Fm2"/>
                             <constraint firstItem="Lsk-k0-a00" firstAttribute="bottom" secondItem="ccp-iL-o4J" secondAttribute="bottom" constant="20" id="VBl-a6-NCG"/>
                             <constraint firstItem="Qv0-SW-Iyx" firstAttribute="leading" secondItem="Lsk-k0-a00" secondAttribute="leading" constant="50" id="Y9d-18-n03"/>
                             <constraint firstItem="AYZ-ra-aut" firstAttribute="centerX" secondItem="UA8-g2-fyu" secondAttribute="centerX" id="cjw-Ji-EV5"/>
                             <constraint firstItem="Lsk-k0-a00" firstAttribute="trailing" secondItem="Qv0-SW-Iyx" secondAttribute="trailing" constant="50" id="eva-QO-lAN"/>
                             <constraint firstItem="Lsk-k0-a00" firstAttribute="bottom" secondItem="AYZ-ra-aut" secondAttribute="bottom" constant="50" id="k0Q-XP-Mjc"/>
-                            <constraint firstItem="4Iz-5q-NNV" firstAttribute="top" secondItem="Lsk-k0-a00" secondAttribute="top" constant="30" id="qBN-i0-KAT"/>
                             <constraint firstItem="ccp-iL-o4J" firstAttribute="leading" secondItem="Lsk-k0-a00" secondAttribute="leading" constant="20" id="qHq-LC-6bp"/>
                             <constraint firstItem="Qv0-SW-Iyx" firstAttribute="top" secondItem="Lsk-k0-a00" secondAttribute="top" constant="50" id="rtp-l5-u50"/>
                         </constraints>
@@ -191,7 +195,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tds-zj-a6e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1162" y="1193"/>
+            <point key="canvasLocation" x="-1870" y="1193"/>
         </scene>
         <!--Add Preset Controller-->
         <scene sceneID="1AI-db-4FM">
@@ -215,7 +219,7 @@
                                 </constraints>
                                 <state key="normal" title="Back"/>
                                 <connections>
-                                    <segue destination="7U7-yR-P4u" kind="custom" customClass="pullUpUnwindSegue" customModule="DewertOkin" customModuleProvider="target" id="ezb-3d-8hf"/>
+                                    <action selector="backButtonPressed:" destination="R1M-Df-ija" eventType="touchUpInside" id="1rR-q0-rSS"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3Ye-X0-sWD">
@@ -266,7 +270,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ed-NC-ZLc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2201" y="1193"/>
+            <point key="canvasLocation" x="-1009" y="1193"/>
         </scene>
     </scenes>
     <resources>
@@ -274,7 +278,4 @@
         <image name="chair_normal_arrows" width="1001.280029296875" height="779"/>
         <image name="remote_icon" width="30" height="30"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="ezb-3d-8hf"/>
-    </inferredMetricsTieBreakers>
 </document>
